refactor: overwrite all enums to lowercase
