# ent/migrate/schema.go
@@ -14,7 +14,7 @@ var (
 		{Name: "create_time", Type: field.TypeTime},
 		{Name: "update_time", Type: field.TypeTime},
 		{Name: "title", Type: field.TypeString, Size: 32, Default: schema.Expr("'room' || setval(pg_get_serial_sequence('rooms','id'),nextval(pg_get_serial_sequence('rooms','id'))-1)")},
-		{Name: "privacy", Type: field.TypeString, Default: "FRIENDS"},
+		{Name: "privacy", Type: field.TypeString, Default: "friends"},
 		{Name: "password_hash", Type: field.TypeBytes, Nullable: true},
 		{Name: "description", Type: field.TypeString, Nullable: true, Size: 140},
 		{Name: "user_room", Type: field.TypeInt, Unique: true},
@@ -45,8 +45,8 @@ var (
 		{Name: "biography", Type: field.TypeString, Nullable: true, Size: 512},
 		{Name: "role", Type: field.TypeString, Default: "USER"},
 		{Name: "friends_ids", Type: field.TypeJSON, Nullable: true},
-		{Name: "language", Type: field.TypeString, Default: "EN"},
-		{Name: "theme", Type: field.TypeString, Default: "SYSTEM"},
+		{Name: "language", Type: field.TypeString, Default: "en"},
+		{Name: "theme", Type: field.TypeString, Default: "system"},
 		{Name: "first_name", Type: field.TypeString, Nullable: true, Size: 32},
 		{Name: "last_name", Type: field.TypeString, Nullable: true, Size: 32},
 		{Name: "sessions", Type: field.TypeJSON, Nullable: true},
